--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Demo GIT</title>
 </head>
 <body>
-    <h1>Titulo Nuevo!</h1>
+    <h1>Titulo Nuevo  modificado para develop</h1>
     <h2>Prueba desde VSC</h2>
     <h3>Push desde VSC</h3>
 </body>
