--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>Titulo Nuevo  modificado para develop</h1>
     <h2>Prueba desde VSC</h2>
     <h3>Push desde VSC</h3>
+    <form action="#" method="get">
+        <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
