Primer cambio en clonado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Titulo Nuevo  modificado para develop</h1>
-    <h2>Prueba desde VSC</h2>
+    <h2>Cambio en Proyecto Clonado</h2>
     <h3>Push desde VSC</h3>
     <form action="#" method="get">
         <input type="button" value="Enviar">
