--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Titulo Nuevo  modificado para develop</h1>
     <h2>Cambio en Proyecto Clonado</h2>
     <form action="#" method="get">
+        <input type="number" name="Edad" id="edad">
         <input type="button" value="Enviar">
     </form>
 </body>
