Se agrega nacimiento

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <form action="#" method="get">
         <input type="number" name="Edad" id="edad">
         <input type="checkbox" name="Seleccione" id="seleccion">
+        <input type="date" name="Nacimiento" id="nacimiento">
         <input type="button" value="Enviar">
     </form>
 </body>
