--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="checkbox" name="Seleccione" id="seleccion">
         <input type="date" name="Nacimiento" id="nacimiento">
         <img src="" alt="Prueba">
+        <video src="cta.mp4"></video>
         <input type="button" value="Enviar">
     </form>
 </body>
